monticore-generator/src/test/resources/cocos/invalid/A4023/A4023b.mc4
package cocos.invalid.A4023;

grammar A4023b extends cocos.invalid.A4023c{

 A = "a";

}
